--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,3 +21,6 @@ git2 = { version = "0.20", features = ["vendored-libgit2"] }
 rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
 tokio = { version = "1", features = ["full"] }
 schemars = "0.8"
+
+[dev-dependencies]
+tempfile = "3"
