Add MCP server with get_next_comment and get_queue_status tools

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,10 @@ git2 = { version = "0.20", features = ["vendored-libgit2"] }
 rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
 tokio = { version = "1", features = ["full"] }
 schemars = "0.8"
+hyper = { version = "1", features = ["server", "http1"] }
+hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
+tower = "0.5"
+tokio-util = { version = "0.7", features = ["rt"] }
 
 [dev-dependencies]
 tempfile = "3"
